--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
+/* Main CSS file */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 .font-roboto-slab {
-    font-family: 'Roboto Slab', serif;
-  }
-  
+  font-family: 'Roboto Slab', serif;
+}
+
+
+input::-ms-reveal,
+input::-ms-clear {
+  display: none;
+}
